Updated the README for the new CLI